# CCBD_FinalExam

./: .gitignore  README.md  collect.sh  live_stub.ipynb  merger.sh  notebook.ipynb  pyproject.toml  requirements.txt
sql/: ExamDB.sql  prepare.sql  q1.sql  q2.sql  q3.sql  q4.sql  q5.sql
