[project]
name = "ccbd-finalexam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "bigquery-magics>=0.15.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dataproc-spark-connect>=1.0.0",
    "debugpy==1.8.20",
    "decorator==5.3.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fonttools==4.63.0",
    "google-cloud-bigquery>=3.42.0",
    "google-cloud-bigquery-storage>=2.39.0",
    "google-cloud-storage>=3.12.0",
    "ipykernel==7.2.0",
    "ipython==9.13.0",
    "ipython-genutils==0.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.20.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.2",
    "narwhals==2.22.1",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==1.26",
    "packaging==26.2",
    "pandas==3.0.3",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "plotly==6.8.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py4j==0.10.9.9",
    "pyarrow==15.0.0",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pyspark==4.1.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "rpds-py==2026.5.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.6",
    "traitlets==5.15.1",
    "typing-extensions==4.15.0",
    "wcwidth==0.7.0",
]
